src/test/deca/context/invalid/without_class/variable_without_type.deca
// Description:
//    Variable declared without type
//
// Result:
//    UNDEFINED_VAR: Variable \(.\)\+ is undefined
//    line 10


{
    x = 2;
}